Migration JDK 1.8 to JDK 25
[2026/02/26]
- SNAPSHOT: 3.0.0-SHAPSHOT
- Migration JDK 1.8 to JDK 25
  + Updated
    + snapshot: 3.0.0-SNAPSHOT
    + java.version: 25
    + compile.source.version: 25
    + compile.target.version: 25
    + maven-compiler-plugin.version: 3.13.0
    + maven-source-plugin.version: 3.3.1
    + maven-javadoc-plugin.version: 3.11.2
    + maven-jar-plugin.version: 3.4.2
    + maven-gpg-plugin.version: 3.2.4
    + disruptor.version: 4.0.0 ( <= com.lmax.distruptor.version)
    + opencsv.version: 5.9 ( <= net.sf.opencsv-version)
    + org.apache.logging.log4j-api.version: 2.24.3
    + slf4j-api.version: 2.0.16
    + jakarta-validation.version: 3.1.0
  + Add
    + jakarta-annotation.version: 3.0.0
- Deprecated
  + @deprecated 대상 코드 및 파일 정리